fix webkit flickering problem (hopefully)

--- a/app/styles/about.scss
+++ b/app/styles/about.scss
@@ -113,6 +113,7 @@ article header {
   display: inline-block; position: relative; overflow: hidden;
   background-color: #eee; margin: 16px 0 0 16px; border-radius: 1px;
   opacity: 0.97; box-shadow: 3px 3px 10px 3px rgba(70,70,70,0.8);
+  -webkit-backface-visibility: hidden;
 }
 .area a, .area a:visited { color: #000;} .area a:hover { text-decoration: underline; }
 .area ol li { list-style:none; margin: 4px 16px; }
